# Projeto

./: .env  README.md  bank.db  pyproject.toml
src/: database.py
src/controllers/: account.py  transaction.py
src/schemas/: account.py  auth.py  transaction.py
src/services/: account.py  transaction.py
src/views/: account.py  auth.py  transaction.py
