[tool.poetry]
name = "projeto"
version = "0.1.0"
description = "FastAPI project"
authors = ["Thiago Juliani <thiagojuliani009@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.135.3"
uvicorn = "^0.44.0"
PyJWT = "^2.12.1"
pydantic-settings = "^2.13.1"
databases = "^0.9.0"
sqlalchemy = "^2.0.49"
aiosqlite = "^0.22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

